// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Run config pkg-scope > cjs structure 1`] = `null`;

exports[`Run config pkg-scope > dist structure 1`] = `null`;

exports[`Run config pkg-scope > es2017 structure 1`] = `
[
  "es2017/",
  "├── index.d.ts",
  "└── index.js",
]
`;

exports[`Run config pkg-scope > esm structure 1`] = `
[
  "esm/",
  "├── index.d.ts",
  "└── index.js",
]
`;

exports[`Run config pkg-scope > file content es2017/index.d.ts 1`] = `
"declare global {
    const __PLUGIN_INFO__: any;
}
export declare const foo = 1;
export declare const info: any;
"
`;

exports[`Run config pkg-scope > file content es2017/index.js 1`] = `
"export const foo = 1;
export const info = {
    "name": "global"
};
"
`;

exports[`Run config pkg-scope > file content esm/index.d.ts 1`] = `
"declare global {
    const __PLUGIN_INFO__: any;
}
export declare const foo = 1;
export declare const info: any;
"
`;

exports[`Run config pkg-scope > file content esm/index.js 1`] = `
"export var foo = 1;
export var info = {
    "name": "pkg-config"
};
"
`;

exports[`Run config plugin-scope > es2017 structure 1`] = `
[
  "es2017/",
  "├── index.d.ts",
  "└── index.js",
]
`;

exports[`Run config plugin-scope > esm structure 1`] = `
[
  "esm/",
  "├── index.d.ts",
  "└── index.js",
]
`;

exports[`Run config plugin-scope > file content es2017/index.d.ts 1`] = `
"declare global {
    const __PLUGIN_INFO__: any;
}
export declare const foo = 1;
export declare const info: any;
"
`;

exports[`Run config plugin-scope > file content es2017/index.js 1`] = `
"export const foo = 1;
export const info = {
    "pluginScope": "global"
};
"
`;

exports[`Run config plugin-scope > file content esm/index.d.ts 1`] = `
"declare global {
    const __PLUGIN_INFO__: any;
}
export declare const foo = 1;
export declare const info: any;
"
`;

exports[`Run config plugin-scope > file content esm/index.js 1`] = `
"export var foo = 1;
export var info = {
    "pluginScope": "pkg"
};
"
`;
